# vimana

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
examples/: run_vimana_flight.py
src/vimana/: __init__.py  cli.py  models.py  report.py  simulation.py
src/vimana/cloud/: __init__.py  health.py  migrator.py  provisioner.py  scaler.py
src/vimana/experiments/: __init__.py  self_heal.py  self_migrate.py  self_provision.py  self_scale.py
src/vimana/intelligence/: __init__.py  anomaly_detector.py  capacity_planner.py  cost_optimizer.py  demand_predictor.py
src/vimana/navigator/: __init__.py  autopilot.py  planner.py  waypoints.py
tests/: test_cloud.py  test_intelligence.py  test_navigator.py
